--- a/index.html
+++ b/index.html
@@ -203,16 +203,35 @@
                     <h2 class="team__title">Наша команда</h2>
                     <ul class="team__list">
                         <li class="team__item">
-                            <img
-                                class="team__foto"
-                                srcset="
-                                    ./images/mobile-img/team/demyanenko-mobile.jpg    1x,
-                                    ./images/mobile-img/team/demyanenko-mobile@2x.jpg 2x
-                                "
-                                src="./images/mobile-img/team/demyanenko-mobile.jpg"
-                                alt="Фото промислового художника Ігора Дем'яненка"
-                                width="450"
-                            />
+                            <picture
+                                ><source
+                                    srcset="
+                                        ./images/mobile-img/team/demyanenko-mobile.jpg    1x,
+                                        ./images/mobile-img/team/demyanenko-mobile@2x.jpg 2x
+                                    "
+                                    media="(max-width: 767.98px)"
+                                />
+                                <source
+                                    srcset="
+                                        ./images/tablet-img/team/demyanenko-tablet.jpg    1x,
+                                        ./images/tablet-img/team/demyanenko-tablet@2x.jpg 2x
+                                    "
+                                    media="(min-width: 768px) and (max-width: 1199.98px)"
+                                />
+                                <source
+                                    srcset="
+                                        ./images/desktop-img/team/demyanenko-desk.jpg    1x,
+                                        ./images/desktop-img/team/demyanenko-desk@2x.jpg 2x
+                                    "
+                                    media="(min-width: 1200px)"
+                                />
+                                <img
+                                    class="team__foto"
+                                    src="./images/desktop-img/team/demyanenko-desk.jpg"
+                                    alt="Фото промислового художника Ігора Дем'яненка"
+                                />
+                            </picture>
+
                             <h3 class="team__name">Ігор Дем'яненко</h3>
                             <p class="team__profession" lang="en">Product Designer</p>
                             <ul class="team__soc-netw-list">
@@ -249,16 +268,35 @@
                             </ul>
                         </li>
                         <li class="team__item">
-                            <img
-                                class="team__foto"
-                                srcset="
-                                    ./images/mobile-img/team/repina-mobile.jpg    1x,
-                                    ./images/mobile-img/team/repina-mobile@2x.jpg 2x
-                                "
-                                src="./images/mobile-img/team/repina-mobile.jpg"
-                                alt="Фото розробника інтерфейсу Ольги Рєпіної"
-                                width="450"
-                            />
+                            <picture
+                                ><source
+                                    srcset="
+                                        ./images/mobile-img/team/repina-mobile.jpg    1x,
+                                        ./images/mobile-img/team/repina-mobile@2x.jpg 2x
+                                    "
+                                    media="(max-width: 767.98px)"
+                                />
+                                <source
+                                    srcset="
+                                        ./images/tablet-img/team/repina-tablet.jpg    1x,
+                                        ./images/tablet-img/team/repina-tablet@2x.jpg 2x
+                                    "
+                                    media="(min-width: 768px) and (max-width: 1199.98px)"
+                                />
+                                <source
+                                    srcset="
+                                        ./images/desktop-img/team/repina-desk.jpg    1x,
+                                        ./images/desktop-img/team/repina-desk@2x.jpg 2x
+                                    "
+                                    media="(min-width: 1200px)"
+                                />
+                                <img
+                                    class="team__foto"
+                                    src="./images/desktop-img/team/repina-desk.jpg"
+                                    alt="Фото розробника інтерфейсу Ольги Рєпіної"
+                                />
+                            </picture>
+
                             <h3 class="team__name">Ольга Рєпіна</h3>
                             <p class="team__profession" lang="en">Frontend Developer</p>
                             <ul class="team__soc-netw-list">
@@ -295,16 +333,35 @@
                             </ul>
                         </li>
                         <li class="team__item">
-                            <img
-                                class="team__foto"
-                                srcset="
-                                    ./images/mobile-img/team/tarasov-mobile.jpg    1x,
-                                    ./images/mobile-img/team/tarasov-mobile@2x.jpg 2x
-                                "
-                                src="./images/mobile-img/team/tarasov-mobile.jpg"
-                                alt="Фото співробітника відділу маркетингу Миколи Тарасова"
-                                width="450"
-                            />
+                            <picture
+                                ><source
+                                    srcset="
+                                        ./images/mobile-img/team/tarasov-mobile.jpg    1x,
+                                        ./images/mobile-img/team/tarasov-mobile@2x.jpg 2x
+                                    "
+                                    media="(max-width: 767.98px)"
+                                />
+                                <source
+                                    srcset="
+                                        ./images/tablet-img/team/tarasov-tablet.jpg    1x,
+                                        ./images/tablet-img/team/tarasov-tablet@2x.jpg 2x
+                                    "
+                                    media="(min-width: 768px) and (max-width: 1199.98px)"
+                                />
+                                <source
+                                    srcset="
+                                        ./images/desktop-img/team/tarasov-desk.jpg    1x,
+                                        ./images/desktop-img/team/tarasov-desk@2x.jpg 2x
+                                    "
+                                    media="(min-width: 1200px)"
+                                />
+                                <img
+                                    class="team__foto"
+                                    src="./images/desktop-img/team/tarasov-desk.jpg"
+                                    alt="Фото співробітника відділу маркетингу Миколи Тарасова"
+                                />
+                            </picture>
+
                             <h3 class="team__name">Микола Тарасов</h3>
                             <p class="team__profession" lang="en">Marketing</p>
                             <ul class="team__soc-netw-list">
@@ -341,16 +398,35 @@
                             </ul>
                         </li>
                         <li class="team__item">
-                            <img
-                                class="team__foto"
-                                srcset="
-                                    ./images/mobile-img/team/ermakov-mobile.jpg    1x,
-                                    ./images/mobile-img/team/ermakov-mobile@2x.jpg 2x
-                                "
-                                src="./images/mobile-img/team/ermakov-mobile.jpg"
-                                alt="Фото дизайнера інтерфейсу користувача Михайла Єрмакова"
-                                width="450"
-                            />
+                            <picture
+                                ><source
+                                    srcset="
+                                        ./images/mobile-img/team/ermakov-mobile.jpg    1x,
+                                        ./images/mobile-img/team/ermakov-mobile@2x.jpg 2x
+                                    "
+                                    media="(max-width: 767.98px)"
+                                />
+                                <source
+                                    srcset="
+                                        ./images/tablet-img/team/ermakov-tablet.jpg    1x,
+                                        ./images/tablet-img/team/ermakov-tablet@2x.jpg 2x
+                                    "
+                                    media="(min-width: 768px) and (max-width: 1199.98px)"
+                                />
+                                <source
+                                    srcset="
+                                        ./images/desktop-img/team/ermakov-desk.jpg    1x,
+                                        ./images/desktop-img/team/ermakov-desk@2x.jpg 2x
+                                    "
+                                    media="(min-width: 1200px)"
+                                />
+                                <img
+                                    class="team__foto"
+                                    src="./images/desktop-img/team/ermakov-desk.jpg"
+                                    alt="Фото дизайнера інтерфейсу користувача Михайла Єрмакова"
+                                />
+                            </picture>
+
                             <h3 class="team__name">Михайло Єрмаков</h3>
                             <p class="team__profession" lang="en">UI Designer</p>
                             <ul class="team__soc-netw-list">
@@ -498,7 +574,6 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__break-row"></div>
                 <div class="footer__subscr-wrapper">
                     <p class="footer__subscr-catchword">Підпишіться на розсилку</p>
                     <form class="footer__subscr-form" name="signup-form">
@@ -520,56 +595,58 @@
         </footer>
 
         <div class="mobile-menu js-menu-container" id="mobile-menu">
-            <button class="menu-toggle js-close-menu">
-                <svg class="mobile-menu__toggle-ico" width="40" height="40">
-                    <use href="./images/sprite.svg#icon-close-menu"></use>
-                </svg>
-            </button>
-            <ul class="mobile-menu__nav-site-list">
-                <li class="mobile-menu__nav-site-item">
-                    <a
-                        class="mobile-menu__nav-site-link mobile-menu__nav-site-link--current-page"
-                        href="./index.html"
-                        >Студія</a
-                    >
-                </li>
-                <li class="mobile-menu__nav-site-item">
-                    <a class="mobile-menu__nav-site-link" href="./portfolio.html">Портфоліо</a>
-                </li>
-                <li class="mobile-menu__nav-site-item">
-                    <a class="mobile-menu__nav-site-link" href="">Контакти</a>
-                </li>
-            </ul>
-            <ul class="mobile-menu__contacts-list">
-                <li class="mobile-menu__contacts-item">
-                    <a
-                        class="mobile-menu__contacts-link mobile-menu__contacts-link--top-pad mobile-menu__contacts-link--email"
-                        href="mailto:info@devstudio.com"
-                        >info@devstudio.com</a
-                    >
-                </li>
-                <li class="mobile-menu__contacts-item">
-                    <a
-                        class="mobile-menu__contacts-link mobile-menu__contacts-link--bottom-pad mobile-menu__contacts-link--phone"
-                        href="tel:+380961111111"
-                        >+38 096 111 11 11</a
-                    >
-                </li>
-            </ul>
-            <ul class="mobile-menu__soc-netw-list">
-                <li class="mobile-menu__soc-netw-item">
-                    <a class="mobile-menu__soc-netw-link" href="">Instagram</a>
-                </li>
-                <li class="mobile-menu__soc-netw-item">
-                    <a class="mobile-menu__soc-netw-link" href="">Twitter</a>
-                </li>
-                <li class="mobile-menu__soc-netw-item">
-                    <a class="mobile-menu__soc-netw-link" href="">Facebook</a>
-                </li>
-                <li class="mobile-menu__soc-netw-item">
-                    <a class="mobile-menu__soc-netw-link" href="">LinkedIn</a>
-                </li>
-            </ul>
+            <div class="mobile_menu__wrapper">
+                <button class="menu-toggle js-close-menu">
+                    <svg class="mobile-menu__toggle-ico" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-close-menu"></use>
+                    </svg>
+                </button>
+                <ul class="mobile-menu__nav-site-list">
+                    <li class="mobile-menu__nav-site-item">
+                        <a
+                            class="mobile-menu__nav-site-link mobile-menu__nav-site-link--current-page"
+                            href="./index.html"
+                            >Студія</a
+                        >
+                    </li>
+                    <li class="mobile-menu__nav-site-item">
+                        <a class="mobile-menu__nav-site-link" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="mobile-menu__nav-site-item">
+                        <a class="mobile-menu__nav-site-link" href="">Контакти</a>
+                    </li>
+                </ul>
+                <ul class="mobile-menu__contacts-list">
+                    <li class="mobile-menu__contacts-item">
+                        <a
+                            class="mobile-menu__contacts-link mobile-menu__contacts-link--top-pad mobile-menu__contacts-link--email"
+                            href="mailto:info@devstudio.com"
+                            >info@devstudio.com</a
+                        >
+                    </li>
+                    <li class="mobile-menu__contacts-item">
+                        <a
+                            class="mobile-menu__contacts-link mobile-menu__contacts-link--bottom-pad mobile-menu__contacts-link--phone"
+                            href="tel:+380961111111"
+                            >+38 096 111 11 11</a
+                        >
+                    </li>
+                </ul>
+                <ul class="mobile-menu__soc-netw-list">
+                    <li class="mobile-menu__soc-netw-item">
+                        <a class="mobile-menu__soc-netw-link" href="">Instagram</a>
+                    </li>
+                    <li class="mobile-menu__soc-netw-item">
+                        <a class="mobile-menu__soc-netw-link" href="">Twitter</a>
+                    </li>
+                    <li class="mobile-menu__soc-netw-item">
+                        <a class="mobile-menu__soc-netw-link" href="">Facebook</a>
+                    </li>
+                    <li class="mobile-menu__soc-netw-item">
+                        <a class="mobile-menu__soc-netw-link" href="">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
