--- a/portfolio.html
+++ b/portfolio.html
@@ -403,7 +403,6 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__break-row"></div>
                 <div class="footer__subscr-wrapper">
                     <p class="footer__subscr-catchword">Підпишіться на розсилку</p>
                     <form class="footer__subscr-form" name="signup-form">
@@ -424,56 +423,58 @@
             </div>
         </footer>
         <div class="mobile-menu js-menu-container" id="mobile-menu">
-            <button class="menu-toggle js-close-menu">
-                <svg class="mobile-menu__toggle-ico" width="40" height="40">
-                    <use href="./images/sprite.svg#icon-close-menu"></use>
-                </svg>
-            </button>
-            <ul class="mobile-menu__nav-site-list">
-                <li class="mobile-menu__nav-site-item">
-                    <a class="mobile-menu__nav-site-link" href="./index.html">Студія</a>
-                </li>
-                <li class="mobile-menu__nav-site-item">
-                    <a
-                        class="mobile-menu__nav-site-link mobile-menu__nav-site-link--current-page"
-                        href="./portfolio.html"
-                        >Портфоліо</a
-                    >
-                </li>
-                <li class="mobile-menu__nav-site-item">
-                    <a class="mobile-menu__nav-site-link" href="">Контакти</a>
-                </li>
-            </ul>
-            <ul class="mobile-menu__contacts-list">
-                <li class="mobile-menu__contacts-item">
-                    <a
-                        class="mobile-menu__contacts-link mobile-menu__contacts-link--top-pad mobile-menu__contacts-link--email"
-                        href="mailto:info@devstudio.com"
-                        >info@devstudio.com</a
-                    >
-                </li>
-                <li class="mobile-menu__contacts-item">
-                    <a
-                        class="mobile-menu__contacts-link mobile-menu__contacts-link--bottom-pad mobile-menu__contacts-link--phone"
-                        href="tel:+380961111111"
-                        >+38 096 111 11 11</a
-                    >
-                </li>
-            </ul>
-            <ul class="mobile-menu__soc-netw-list">
-                <li class="mobile-menu__soc-netw-item">
-                    <a class="mobile-menu__soc-netw-link" href="">Instagram</a>
-                </li>
-                <li class="mobile-menu__soc-netw-item">
-                    <a class="mobile-menu__soc-netw-link" href="">Twitter</a>
-                </li>
-                <li class="mobile-menu__soc-netw-item">
-                    <a class="mobile-menu__soc-netw-link" href="">Facebook</a>
-                </li>
-                <li class="mobile-menu__soc-netw-item">
-                    <a class="mobile-menu__soc-netw-link" href="">LinkedIn</a>
-                </li>
-            </ul>
+            <div class="mobile_menu__wrapper">
+                <button class="menu-toggle js-close-menu">
+                    <svg class="mobile-menu__toggle-ico" width="40" height="40">
+                        <use href="./images/sprite.svg#icon-close-menu"></use>
+                    </svg>
+                </button>
+                <ul class="mobile-menu__nav-site-list">
+                    <li class="mobile-menu__nav-site-item">
+                        <a class="mobile-menu__nav-site-link" href="./index.html">Студія</a>
+                    </li>
+                    <li class="mobile-menu__nav-site-item">
+                        <a
+                            class="mobile-menu__nav-site-link mobile-menu__nav-site-link--current-page"
+                            href="./portfolio.html"
+                            >Портфоліо</a
+                        >
+                    </li>
+                    <li class="mobile-menu__nav-site-item">
+                        <a class="mobile-menu__nav-site-link" href="">Контакти</a>
+                    </li>
+                </ul>
+                <ul class="mobile-menu__contacts-list">
+                    <li class="mobile-menu__contacts-item">
+                        <a
+                            class="mobile-menu__contacts-link mobile-menu__contacts-link--top-pad mobile-menu__contacts-link--email"
+                            href="mailto:info@devstudio.com"
+                            >info@devstudio.com</a
+                        >
+                    </li>
+                    <li class="mobile-menu__contacts-item">
+                        <a
+                            class="mobile-menu__contacts-link mobile-menu__contacts-link--bottom-pad mobile-menu__contacts-link--phone"
+                            href="tel:+380961111111"
+                            >+38 096 111 11 11</a
+                        >
+                    </li>
+                </ul>
+                <ul class="mobile-menu__soc-netw-list">
+                    <li class="mobile-menu__soc-netw-item">
+                        <a class="mobile-menu__soc-netw-link" href="">Instagram</a>
+                    </li>
+                    <li class="mobile-menu__soc-netw-item">
+                        <a class="mobile-menu__soc-netw-link" href="">Twitter</a>
+                    </li>
+                    <li class="mobile-menu__soc-netw-item">
+                        <a class="mobile-menu__soc-netw-link" href="">Facebook</a>
+                    </li>
+                    <li class="mobile-menu__soc-netw-item">
+                        <a class="mobile-menu__soc-netw-link" href="">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <script
             defer
