made final fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -423,57 +423,116 @@
             </div>
         </footer>
         <div class="mobile-menu js-menu-container" id="mobile-menu">
-            <div class="mobile_menu__wrapper">
-                <button class="menu-toggle js-close-menu">
-                    <svg class="mobile-menu__toggle-ico" width="40" height="40">
-                        <use href="./images/sprite.svg#icon-close-menu"></use>
+            <button class="menu-toggle js-close-menu">
+                <svg class="mobile-menu__toggle-ico" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-close-menu"></use>
+                </svg>
+            </button>
+            <ul class="mobile-menu__nav-site-list">
+                <li class="mobile-menu__nav-site-item">
+                    <a class="mobile-menu__nav-site-link" href="./index.html">Студія</a>
+                </li>
+                <li class="mobile-menu__nav-site-item">
+                    <a
+                        class="mobile-menu__nav-site-link mobile-menu__nav-site-link--current-page"
+                        href="./portfolio.html"
+                        >Портфоліо</a
+                    >
+                </li>
+                <li class="mobile-menu__nav-site-item">
+                    <a class="mobile-menu__nav-site-link" href="">Контакти</a>
+                </li>
+            </ul>
+            <ul class="mobile-menu__contacts-list">
+                <li class="mobile-menu__contacts-item">
+                    <a
+                        class="mobile-menu__contacts-link mobile-menu__contacts-link--top-pad mobile-menu__contacts-link--email"
+                        href="mailto:info@devstudio.com"
+                        >info@devstudio.com</a
+                    >
+                </li>
+                <li class="mobile-menu__contacts-item">
+                    <a
+                        class="mobile-menu__contacts-link mobile-menu__contacts-link--bottom-pad mobile-menu__contacts-link--phone"
+                        href="tel:+380961111111"
+                        >+38 096 111 11 11</a
+                    >
+                </li>
+            </ul>
+            <ul class="mobile-menu__soc-netw-list">
+                <li class="mobile-menu__soc-netw-item">
+                    <a class="mobile-menu__soc-netw-link" href="">Instagram</a>
+                </li>
+                <li class="mobile-menu__soc-netw-item">
+                    <a class="mobile-menu__soc-netw-link" href="">Twitter</a>
+                </li>
+                <li class="mobile-menu__soc-netw-item">
+                    <a class="mobile-menu__soc-netw-link" href="">Facebook</a>
+                </li>
+                <li class="mobile-menu__soc-netw-item">
+                    <a class="mobile-menu__soc-netw-link" href="">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button class="modal__btn-close" type="button" data-modal-close>
+                    <svg class="modal__ico-close" width="18" height="18">
+                        <use href="./images/sprite.svg#icon-closebtn"></use>
                     </svg>
                 </button>
-                <ul class="mobile-menu__nav-site-list">
-                    <li class="mobile-menu__nav-site-item">
-                        <a class="mobile-menu__nav-site-link" href="./index.html">Студія</a>
-                    </li>
-                    <li class="mobile-menu__nav-site-item">
-                        <a
-                            class="mobile-menu__nav-site-link mobile-menu__nav-site-link--current-page"
-                            href="./portfolio.html"
-                            >Портфоліо</a
-                        >
-                    </li>
-                    <li class="mobile-menu__nav-site-item">
-                        <a class="mobile-menu__nav-site-link" href="">Контакти</a>
-                    </li>
-                </ul>
-                <ul class="mobile-menu__contacts-list">
-                    <li class="mobile-menu__contacts-item">
-                        <a
-                            class="mobile-menu__contacts-link mobile-menu__contacts-link--top-pad mobile-menu__contacts-link--email"
-                            href="mailto:info@devstudio.com"
-                            >info@devstudio.com</a
-                        >
-                    </li>
-                    <li class="mobile-menu__contacts-item">
-                        <a
-                            class="mobile-menu__contacts-link mobile-menu__contacts-link--bottom-pad mobile-menu__contacts-link--phone"
-                            href="tel:+380961111111"
-                            >+38 096 111 11 11</a
-                        >
-                    </li>
-                </ul>
-                <ul class="mobile-menu__soc-netw-list">
-                    <li class="mobile-menu__soc-netw-item">
-                        <a class="mobile-menu__soc-netw-link" href="">Instagram</a>
-                    </li>
-                    <li class="mobile-menu__soc-netw-item">
-                        <a class="mobile-menu__soc-netw-link" href="">Twitter</a>
-                    </li>
-                    <li class="mobile-menu__soc-netw-item">
-                        <a class="mobile-menu__soc-netw-link" href="">Facebook</a>
-                    </li>
-                    <li class="mobile-menu__soc-netw-item">
-                        <a class="mobile-menu__soc-netw-link" href="">LinkedIn</a>
-                    </li>
-                </ul>
+
+                <form class="callback" name="call-back">
+                    <p class="callback__title">Залиште свої дані, ми вам передзвонимо</p>
+                    <label class="callback__label" for="name">Ім'я</label>
+                    <div class="callback__decorate-wrapper">
+                        <input class="callback__input" type="text" name="name" id="name" />
+                        <svg class="callback__input-ico" width="12px" height="12px">
+                            <use href="./images/sprite.svg#icon-personmodal"></use>
+                        </svg>
+                    </div>
+                    <label class="callback__label" for="tel">Телефон</label>
+                    <div class="callback__decorate-wrapper">
+                        <input class="callback__input" type="tel" name="tel" id="tel" />
+                        <svg class="callback__input-ico" width="14px" height="14px">
+                            <use href="./images/sprite.svg#icon-phonemodal"></use>
+                        </svg>
+                    </div>
+                    <label class="callback__label" for="email">Пошта</label>
+                    <div class="callback__decorate-wrapper">
+                        <input class="callback__input" type="email" name="email" id="email" />
+                        <svg class="callback__input-ico" width="16px" height="12px">
+                            <use href="./images/sprite.svg#icon-emailmodal"></use>
+                        </svg>
+                    </div>
+                    <label class="callback__label" for="comment">Коментар</label>
+                    <textarea
+                        class="callback__textarea"
+                        name="comment"
+                        placeholder="Введіть текст"
+                        id="comment"
+                    ></textarea>
+                    <div class="callback__policy-padding-maker">
+                        <label class="callback__policy-fild">
+                            <input
+                                class="callback__policy-checkbox"
+                                type="checkbox"
+                                name="policy"
+                                value="agreed"
+                            />
+                            <svg class="callback__checkbox-ico" width="15px" height="15px">
+                                <use href="./images/sprite.svg#icon-check"></use>
+                            </svg>
+                            <span class="callback__policy-label"
+                                >Погоджуюся з розсилкою та приймаю
+                                <a class="callback__policy-link" href="" target="_blank"
+                                    >Умови договору</a
+                                ></span
+                            >
+                        </label>
+                    </div>
+                    <button class="callback__btn" type="submit">Відправити</button>
+                </form>
             </div>
         </div>
         <script
