--- a/portfolio.html
+++ b/portfolio.html
@@ -114,12 +114,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/technocryak-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/technocryak-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\technocryak-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\technocryak-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\technokryak-tablet-354w.jpg    354w,
+                                            .\images\tablet-img\portfolio\technokryak-tablet@2x-708w.jpg 708w,
+                                            .\images\desktop-img\portfolio\technokryak-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\technokryak-desk@2x-740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/technocryak-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src=".\images\mobile-img\portfolio\technocryak-mobile-450w.jpg"
                                         alt="Створення веб-сайту компанії Технокряк"
-                                        width="450"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -139,12 +143,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/orlean-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/orlean-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\orlean-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\orlean-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\orlean-tablet-354w.jpg    354w,
+                                            .\images\tablet-img\portfolio\orlean-tablet@2x-708w.jpg 708w,
+                                            .\images\desktop-img\portfolio\orlean-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\orlean-desk@2x-740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/orlean-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src=".\images\mobile-img\portfolio\orlean-mobile-450w.jpg "
                                         alt="Розробка дизайну постера New Orlean vs Golden Star"
-                                        width="370"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -164,12 +172,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/seafood-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/seafood-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\seafood-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\seafood-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\seafood-tablet-354w.jpg    354w,
+                                            .\images\tablet-img\portfolio\seafood-tablet@2x-708w.jpg 708w,
+                                            .\images\desktop-img\portfolio\seafood-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\seafood-desk@2x-740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/seafood-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src="./images\mobile-img\portfolio\seafood-mobile-450w.jpg"
                                         alt="Розробка додатку для ресторану SeaFood"
-                                        width="450"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -189,12 +201,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/prime-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/prime-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\prime-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\prime-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\prime-tablet-354w.jpg    354w,
+                                            .\images\tablet-img\portfolio\prime-tablet@2x-708w.jpg 708w,
+                                            .\images\desktop-img\portfolio\prime-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\prime-desk@2x-740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/prime-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src=".\images\mobile-img\portfolio\prime-mobile-450w.jpg.jpg"
                                         alt="Маркетингові послуги для проекту Prime"
-                                        width="450"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -214,12 +230,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/boxes-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/boxes-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\boxes-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\boxes-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\boxes-tablet-354w.jpg    354w,
+                                            .\images\tablet-img\portfolio\boxes-tablet@2x-708w.jpg 708w,
+                                            .\images\desktop-img\portfolio\boxes-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\boxes-desk@2x-740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/boxes-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src=".\images\mobile-img\portfolio\boxes-mobile-450w"
                                         alt="Разработка додатку для проекту Boxes"
-                                        width="370"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -239,12 +259,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/inspiration-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/inspiration-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\inspiration-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\inspiration-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\inspiration-tablet-354w.jpg    354w,
+                                            .\images\tablet-img\portfolio\inspiration-tablet@2x-708w.jpg 708w,
+                                            .\images\desktop-img\portfolio\inspiration-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\inspiration-desk-@2x740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/inspiration-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src=".\images\mobile-img\portfolio\inspiration-mobile-450w.jpg"
                                         alt="Створення веб-сайту Inspiration has no Borders"
-                                        width="450"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -266,12 +290,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/limited-edition-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/limited-edition-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\limited-edition-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\limited-edition-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\limited-edition-354w.jpg           354w,
+                                            .\images\tablet-img\portfolio\limited-edition@2x-708w.jpg        708w,
+                                            .\images\desktop-img\portfolio\limited-edition-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\limited-edition-desk@2x-740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/limited-edition-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src=".\images\mobile-img\portfolio\limited-edition-mobile-450w.jpg"
                                         alt="Розробка дизайну для Видання Limited Edition"
-                                        width="370"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -291,12 +319,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/lab-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/lab-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\lab-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\lab-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\lab-tablet-354w.jpg    354w,
+                                            .\images\tablet-img\portfolio\lab-tablet@2x-708w.jpg 708w,
+                                            .\images\desktop-img\portfolio\lab-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\lab-desk@2x-740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/lab-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src=".\images\mobile-img\portfolio\lab-mobile-450w.jpg"
                                         alt="Маркетингові послуги для проекту LAB"
-                                        width="450"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -316,12 +348,16 @@
                                     <img
                                         class="example__img"
                                         srcset="
-                                            ./images/mobile-img/portfolio/growing-business-mobile.jpg    1x,
-                                            ./images/mobile-img/portfolio/growing-business-mobile@2x.jpg 2x
+                                            .\images\mobile-img\portfolio\growing-business-mobile-450w.jpg    450w,
+                                            .\images\mobile-img\portfolio\growing-business-mobile@2x-900w.jpg 900w,
+                                            .\images\tablet-img\portfolio\growing-business-tablet-354w.jpg    354w,
+                                            .\images\tablet-img\portfolio\growing-business-tablet@2x-708w.jpg 708w,
+                                            .\images\desktop-img\portfolio\growing-business-desk-370w.jpg     370w,
+                                            .\images\desktop-img\portfolio\growing-business-desk@2x-740w.jpg  740w
                                         "
-                                        src="./images/mobile-img/portfolio/growing-business-mobile.jpg"
+                                        sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (max-width: 767.98px) 450px"
+                                        src=".\images\mobile-img\portfolio\growing-business-mobile-450w.jpg"
                                         alt="Розробка додатку Growing Business"
-                                        width="450"
                                     />
                                     <p class="example__animated-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем
